<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/save" />

    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/type" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/typeEditText"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/price" />

    <EditText
        android:id="@+id/storeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/priceEditText"
        android:layout_alignRight="@+id/priceEditText"
        android:layout_below="@+id/priceEditText"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/storeName" />

    <EditText
        android:id="@+id/linkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/storeNameEditText"
        android:layout_alignRight="@+id/storeNameEditText"
        android:layout_below="@+id/storeNameEditText"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/link" />

</RelativeLayout>